# FinSight-AI

./: .coveragerc  .gitignore  CONTRIBUTING.md  pyproject.toml  requirements.txt
.github/agents/: architect.agent.md  qa-engineer.agent.md
.github/workflows/: coverage-guardrails.yml
app/: main.py
app/core/: data.py  features.py  preprocessing_service.py  stock_service.py  utils.py
app/ui/: landing.py  layout.py  predictor.py
config/: config.yaml
docs/: cli-usage.md
docs/architecture/: dto-migration.md  overview.md
docs/conventions/: naming-and-contracts.md
scripts/smoke/: feature_pipeline_smoke.py  time_split_policy_smoke.py
src/: main.py
src/finsight/: __init__.py
src/finsight/adapters/web_streamlit/: app.py  presenters.py  ticker_options.py
src/finsight/application/: __init__.py  dto.py  policies.py
src/finsight/application/contracts/: __init__.py  run_manifest.py
src/finsight/application/use_cases/: __init__.py  compare_models.py  fetch_market_data.py  forecast.py  load_model_run.py  train_model.py
src/finsight/bootstrap/: container.py
src/finsight/cli/: __init__.py  main.py
src/finsight/config/: __init__.py  settings.py
src/finsight/core/: data.py  data_fetcher.py  data_preprocessing.py  feature_engineering.py  features.py  preprocessing_service.py  stock_service.py
src/finsight/core/services/: preprocessing_service.py  stock_service.py
src/finsight/domain/: __init__.py  entities.py  metrics.py  ports.py  value_objects.py
src/finsight/helpers/: helper.py
src/finsight/infrastructure/: __init__.py
src/finsight/infrastructure/features/: __init__.py  (+3 more)
src/finsight/ui/: __init__.py  compare_models.py  layout.py  predictor.py
tests/: conftest.py
tests/unit/application/: test_dto.py  test_policies.py
tests/unit/bootstrap/: test_container.py
tests/unit/cli/: test_main.py
tests/unit/config/: test_settings.py
tests/unit/domain/: test_metrics.py  test_value_objects.py
(+36 files in other folders)
