[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight-ai"
version = "0.1.0"
description = "FinSight-AI stock analysis and forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "streamlit-option-menu",
  "pandas",
  "matplotlib",
  "yfinance",
  "PyYAML"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "diff-cover",
]

[project.scripts]
finsight = "finsight.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["finsight*"]

[tool.setuptools.package-data]
"finsight" = ["assets/*", "assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=src/finsight --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src/finsight"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 50
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
